--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </head>
 <body>
     <center>
-    <h1>Homepage</h1>
+    <h1 style="font-size:10vw">Homepage</h1>
     </center>
     <div class="row">
-        <div class="col-12 col-s-3">
+        <div class="col-12 col-s-9">
             <div class="containerbox">
                 <div class="col-3 col-s-3 linkbox">
                     <div class="box"><a href="pages/Introduction.html">Link to my Introduction page</a></div>
@@ -34,12 +34,26 @@
                     <div class="box"><a href="pages/Resume.pdf">Link to my Resume</a></div>
                 </div>
                 <div class="col-5 col-s-5">
-                        
+                    <center>
+                    <img src="images/Thammasat.png" alt="Thammasat emblem" style="min-width: 50px ;max-width:20%;height: auto;">
+                    </center>
                 </div>
-                <div class="col-1 col-s-12">
-                    <div class="life">
+                <div class="col-6 col-s-12">
+                    <center>
                         <h2>TU Life</h2>
-                    </div>
+                            <div class="tulife">
+                                <p>
+                                    ผมได้เรียนจบมาจากโรงเรียนนครสวรรค์ แล้วได้สอบเข้ามหาวิทยาลัยธรรมศาสตร์
+                                    ได้เลือกสาขาวิทยาการคอม เนื่องจากเป็นคนที่ชอบใช้คอมพิวเตอร์ในการทำงานต่างๆ
+                                    รวมไปถึงงานอดิเรก เพื่อที่จะได้เรียนรู้สิ่งต่างๆ ที่สามารถนำมาใช้งานได้กับคอมพิวเตอร์ 
+                                    ซึ่งปีแรกมาก็เรียนรู้สนุกมากเพราะได้ ทำการเขียนโค้ดต่างๆที่ตนเองสนใจ แต่ไม่ค่อยรู้จักใครในห้องเนื่องจากเป็นการเรียนออนไลน์
+                                    ผลกระทบจาก COVID-19 แต่ปีที่ 2 ก็เริ่มที่จะได้มาเรียนออนไซต์และได้รู้จักเพื่อนๆหลายคน
+                                    จากการทำงานกลุ่ม และเริ่มลำบากในการเรียนเนื่องจากมีแต่การเรียนทฤษฏี ซึ่งส่วนตัวนั้นสนใจ
+                                    การเขียนโค้ดมากกว่า แต่ไม่ค่อยมีการเรียนในแลปสักเท่าไหร่ ต่อมาปี 3 ณ ปัจจุบันกำลังจะได้
+                                    ไปสหกิจแล้ว ซึ่งกำลังรอจากอาจารย์เพื่อมาอธิบายและบอกถึงบริษัทที่สามารถเลือกได้
+                                </p>
+                            </div>
+                    </center>
                 </div>
             </div>
         </div>
