--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
         padding-left: 6px;
         padding-right: 6px;
     }
-
+    body{
+        background-color:powderblue ;
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+    html{
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+    }
     .footer {
    position: fixed;
    left: 0;
