--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         padding-right: 6px;
     }
     body{
-        background-color:powderblue ;
         margin: 0;
-        height: 100%;
         overflow: hidden;
+        min-height: 400px;
+        margin-bottom: 100px;
+        clear:both;
     }
     html{
         margin: 0;
@@ -68,8 +69,8 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <p>ข้อมูลติดต่อ<br>เบอร์โทรศัพท์ : 0828892708<br>Personal Email : peerpochana@gmail.com<br>Dome Email : peer.poc@dome.tu.ac.th</p>
-      </div>
 </body>
+<div class="footer">
+    <p>ข้อมูลติดต่อ<br>เบอร์โทรศัพท์ : 0828892708<br>Personal Email : peerpochana@gmail.com<br>Dome Email : peer.poc@dome.tu.ac.th</p>
+  </div>
 </html>
