--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         padding-right: 6px;
     }
     body{
-        margin: 0;
-        overflow: hidden;
-        min-height: 400px;
+        overflow-x: hidden;
         margin-bottom: 100px;
         clear:both;
     }
@@ -22,14 +20,12 @@
         overflow: hidden;
     }
     .footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: rgb(0, 255, 166);
-   color: black;
-   text-align: center;
-}
+        position: fixed;
+        width: 100%;
+        background-color: rgb(0, 255, 166);
+        color: black;
+        text-align: center;
+    }
 </style>
 </head>
 <body>
@@ -69,8 +65,8 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <p>ข้อมูลติดต่อ<br>เบอร์โทรศัพท์ : 0828892708<br>Personal Email : peerpochana@gmail.com<br>Dome Email : peer.poc@dome.tu.ac.th</p>
+      </div>
 </body>
-<div class="footer">
-    <p>ข้อมูลติดต่อ<br>เบอร์โทรศัพท์ : 0828892708<br>Personal Email : peerpochana@gmail.com<br>Dome Email : peer.poc@dome.tu.ac.th</p>
-  </div>
 </html>
