--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     html{
         margin: 0;
         height: 100%;
-        overflow: hidden;
+        overflow-x: hidden;
     }
     .footer {
         position: fixed;
