--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         height: 100%;
         overflow-x: hidden;
     }
-    .footer {
-        position: fixed;
+    #footer {
+        left: 0;
+        right: 0;
+        bottom: 0;
         width: 100%;
         background-color: rgb(0, 255, 166);
         color: black;
@@ -65,8 +67,8 @@
             </div>
         </div>
     </div>
-    <div class="footer">
+    <footer id="footer">
         <p>ข้อมูลติดต่อ<br>เบอร์โทรศัพท์ : 0828892708<br>Personal Email : peerpochana@gmail.com<br>Dome Email : peer.poc@dome.tu.ac.th</p>
-      </div>
+    </footer>
 </body>
 </html>
