added Group Project 3

--- a/pages/Showcase.html
+++ b/pages/Showcase.html
@@ -15,6 +15,7 @@
                     <div class="box"><a href="../pages/Portfolio.pdf">Link to my Portfolio</a></div>
                     <div class="box"><a href="../pages/GroupProject1.pdf">Link to my Group Project 1</a></div>
                     <div class="box"><a href="../pages/GroupProject2.pdf">Link to my Group Project 2</a></div>
+                    <div class="box"><a href="../pages/GroupProject3.pdf">Link to my Group Project 3</a></div>
                 </div>
             </div>
         </div>
